修正接口对象的字段名称